Adjust link button styling, fix controls alignment and table width on View Your DAOs page

--- a/src/components/Controls/Input/styles.scss
+++ b/src/components/Controls/Input/styles.scss
@@ -46,7 +46,7 @@
     flex-direction: column;
     position: absolute;
     right: 10px;
-    top: 20px;
+    top: 10px;
     display: flex;
 
     svg {
