--- a/src/components/Modals/DeployVotingStrategyModal/styles.scss
+++ b/src/components/Modals/DeployVotingStrategyModal/styles.scss
@@ -2,7 +2,6 @@
 
 .voting-strategy-form {
   h2 {
-    margin-top: 50px;
     font-size: 24px;
   }
 
